Add POS configuration module

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,6 +62,7 @@
           <ul class="dropdown-menu" aria-labelledby="configDropdown">
             <li><a class="dropdown-item" href="{{ url_for('config_secuencias') }}">Secuencias Numéricas</a></li>
             <li><a class="dropdown-item" href="{{ url_for('modulo_facturacion_arca.config_facturacion') }}">Facturación ARCA</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('config_pos') }}">Config POS</a></li>
           </ul>
         </li>
         {% endif %}
