--- a/templates/facturacion_arca/config_arca.html
+++ b/templates/facturacion_arca/config_arca.html
@@ -136,6 +136,17 @@
             <div id="facturaResponse" class="mt-3 alert alert-info d-none"></div>
         </div>
     </div>
+
+    <div class="card shadow-sm mt-4">
+        <div class="card-header">
+            <h5>Flujos de Facturación</h5>
+        </div>
+        <div class="card-body">
+            <a href="{{ url_for('modulo_facturacion_arca.factura_form') }}" class="btn btn-primary me-2">Factura</a>
+            <a href="{{ url_for('modulo_facturacion_arca.nota_credito') }}" class="btn btn-warning me-2">Nota de Crédito</a>
+            <a href="{{ url_for('modulo_facturacion_arca.acopio') }}" class="btn btn-secondary">Acopio</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
 {% block extra_scripts %}
