--- a/templates/layout_tablet.html
+++ b/templates/layout_tablet.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
-<body class="tablet-layout">
+<body class="theme-sim tablet-layout">
 <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">MyPOS</a>
